Fixing card alignments

--- a/src/components/search/search_results/style.module.scss
+++ b/src/components/search/search_results/style.module.scss
@@ -8,7 +8,7 @@
     padding: 2rem;
     display: flex;
     flex-direction: row;
-    justify-content: start;
+    justify-content: space-around;
      gap: 1rem;
      flex-wrap: wrap;
 }
